--- a/index.html
+++ b/index.html
@@ -25,18 +25,38 @@
                 <li class="menu m8"><i class="fas fa-dice-one"></i></li>
             </ul>
         </section>
+
         <section class="text">
+
             <ul>
-                <li class="popuptext p1">Popuptext</li>
-                <li class="popuptext p2">Popuptext</li>
-                <li class="popuptext p3">Popuptext</li>
-                <li class="popuptext p4">Popuptext</li>
-                <li class="popuptext p5">Popuptext</li>
-                <li class="popuptext p6">Popuptext</li>
-                <li class="popuptext p7">Popuptext</li>
-                <li class="popuptext p8">Popuptext</li>
+                <li class="popuptext p1">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p2">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p3">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p4">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p5">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p6">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p7">
+                    <p>Popuptext</p>
+                </li>
+                <li class="popuptext p8">
+                    <p>Popuptext</p>
+                </li>
             </ul>
+
         </section>
+
     </main>
 </body>
 
