--- a/index.html
+++ b/index.html
@@ -3,61 +3,53 @@
 
 <head>
     <link rel="stylesheet" href="Normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-
+    <title>Document</title>
 </head>
 
 <body>
+
     <main>
-        <section class="icon">
+        <div id="bloc">
             <ul>
-                <li class="menu m1"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m2"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m3"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m4"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m5"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m6"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m7"><i class="fas fa-dice-one"></i></li>
-                <li class="menu m8"><i class="fas fa-dice-one"></i></li>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
             </ul>
-        </section>
-
-        <section class="text">
-
             <ul>
-                <li class="popuptext p1">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p2">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p3">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p4">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p5">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p6">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p7">
-                    <p>Popuptext</p>
-                </li>
-                <li class="popuptext p8">
-                    <p>Popuptext</p>
-                </li>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
             </ul>
-
-        </section>
-
+            <ul>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
+            </ul>
+            <ul>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
+            </ul>
+            <ul>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
+            </ul>
+            <ul>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
+            </ul>
+            <ul>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
+            </ul>
+            <ul>
+                <li class="icon"><i class="fas fa-gamepad"></i></li>
+                <li class="text"><span>Text</span></li>
+            </ul>
+        </div>
     </main>
+
+
 </body>
 
 </html>
