--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="Normalize.css">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,35 +16,35 @@
         <div id="bloc">
             <ul>
                 <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="text"><span>Main Page</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-dice-one"></i></li>
+                <li class="text"><span>Game 1</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-dice-two"></i></li>
+                <li class="text"><span>Game 2</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-dice-three"></i></li>
+                <li class="text"><span>Game 3</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-dice-four"></i></li>
+                <li class="text"><span>Game 4</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-dice-five"></i></li>
+                <li class="text"><span>Game 5</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-dice-six"></i></li>
+                <li class="text"><span>Game 6</span></li>
             </ul>
             <ul>
-                <li class="icon"><i class="fas fa-gamepad"></i></li>
-                <li class="text"><span>Text</span></li>
+                <li class="icon"><i class="fas fa-cog"></i></li>
+                <li class="text"><span>Options</span></li>
             </ul>
         </div>
     </main>
